# archax

./: .gitignore  README.md  pyproject.toml
2022-09-27-modal-bench/: datasets.py  runjax.py
2022-10-05-jax-graph/: main.py  t.dot  t.hlo
2022-10-18-protos/: README.md  main.py  optimized_hlo.dot  original_hlo.dot
2022-10-18-protos/tensorflow/compiler/xla/: xla_data_pb2.py  xla_data_pb2.pyi
2022-10-18-protos/tensorflow/compiler/xla/service/: hlo_pb2.py  hlo_pb2.pyi
2022-10-31-alpa/: README.md  experiment.ipynb  imdb_embedding.py  perform_embedding.py
2022-10-31-imdb/: README.md  experiment.ipynb  perform_embedding.py  train_embedding.py
2022-11-07-flower/: README.md  experiment.ipynb  perform_embedding.py  train_flower_cnn_model.py
2022-11-07-flower/trials/: 0.json  1.json  10.json  11.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
2022-11-11-cnn-alpa/: jax_alpa.py
2022-11-20-lm-tf/: README.md  lm.py
2022-11-20-rnn-tf/: README.md  rnn.pickle  rnn.py
2022-11-21-gnn-tf/: README.md  gnn.py
2022-11-21-gnn-tf/__MACOSX/: ._mutag
2022-11-22-lstm-tf/: README.md  lstm.pickle  lstm.py
tests/: basic_test.py
