[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipejax"
description = "A network-optimized flexible parallelism library for JAX"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["jax", "parallelism", "machine-learning"]
authors = [
  { name = "Eric Zhang", email = "ekzhang1@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/ekzhang/pipejax#readme"
Issues = "https://github.com/ekzhang/pipejax/issues"
Source = "https://github.com/ekzhang/pipejax"

[tool.hatch.version]
path = "pipejax/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=pipejax --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "pipejax/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
