[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archax"
description = "A network-optimized flexible parallelism library for JAX"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["jax", "parallelism", "machine-learning"]
authors = [
  { name = "Eric Zhang", email = "ekzhang1@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jax[cpu]~=0.3",
  "numpy~=1.23",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/ekzhang/archax#readme"
Issues = "https://github.com/ekzhang/archax/issues"
Source = "https://github.com/ekzhang/archax"

[tool.hatch.version]
path = "archax/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
test = "pytest --no-cov"
test-cov = "pytest --cov --cov-report=term-missing --cov-config=pyproject.toml"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
source_pkgs = ["archax", "tests"]
branch = true
parallel = true
omit = [
  "archax/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
